좌석 선점 분산락 + 팬싱토큰 + 낙관적 락 수정